tests/parser/error/definition_no_def.out
tests/parser/error/definition_no_def.st:1:1
1 | a := 3
    ^
Error: Expected keyword 'def'.
